<resources>
    <string name="app_name">时间胶囊</string>
    <string name="large_text" translatable="false">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="test_comment" translatable="false">哈哈哈，说的不错，表示支持~~~~\n可是那又怎么样呢</string>
    <string name="share_to">分享</string>
    <string name="is_loading">正在加載，喝杯茶吧~</string>
    <string name="get_profile_failed">此人过于神秘，获取信息失败…</string>
    <string name="delete_comment">删除回复</string>
    <string name="comment_failed">评论失败</string>
    <string name="retry">重试</string>
    <string name="get_diary_failed">啊哦，地球上找不到该日记</string>
    <string name="get_comment_failed">啊哦，找不到该日记的评论</string>
    <string name="delete_comment_failed">回复删除失败</string>
    <string name="copy">复制</string>
    <string name="copyed">内容已复制~</string>
    <string name="report">举报</string>
    <string name="reply_to_xxx">回复 %s 的评论：</string>
    <string name="no_text_entered">O__O 您还没说话呢</string>
    <string name="speak_more">多说点什么吧~</string>
    <string name="total_comments">共 %d 条评论</string>
    <string name="total_followings">共 %d 个关注</string>
    <string name="total_followers">共 %d 个关注者</string>
    <string name="total_tips">共 %d 条未读</string>
    <string name="comment_count">%d 条评论</string>
    <string name="xxx_copied">%s 已复制</string>
    <string name="picture_load_fail">图片太神秘了，无法加载</string>
    <string name="save_img_success">图片已保存</string>
    <string name="save_img_failed">由于神秘力量，图片保存失败</string>
    <string name="following_diary">关注日记</string>
    <string name="cant_get_followings">无法获取您关注的用户</string>
    <string name="action_settings">设置</string>
    <string name="timepill_url" translatable="false">http://www.timepill.net/</string>
    <string name="reply_to_diary">回复此日记…</string>
    <string name="my_diary">我的日记</string>
    <string name="my_notebook">日记本</string>
    <string name="login_failed">登录失败，请稍后再试</string>
    <string name="cant_get_followers">无法获取关注您的用户</string>
    <string name="no_public_notebook">没有公开日记本</string>
    <string name="cancel_follow_success">已取消关注</string>
    <string name="no_today_diary">没有最新日记</string>
    <string name="notebook_update_success">日记本已更新</string>
    <string name="follow_success">关注成功~</string>
    <string name="no_valid_notebook">没有日记本，或者所有日记本已过期</string>
    <string name="x_diaries_updated">更新了 %d 条日记</string>
    <string name="view">查看</string>
    <string name="my_notifications">通知</string>
    <string name="cant_get_notifications">无法获取最近的通知~</string>
    <string name="cant_connect_net">无法连接网络</string>
    <string name="no_new_notification">没有新消息</string>
    <string name="edit">编辑</string>
    <string name="privacy_me_only">仅自己可见</string>
    <string name="privacy_public">大家可见</string>
    <string name="privacy_property">可见性</string>
    <string name="create_notebook">创建日记本</string>
    <string name="expire_time">过期时间：</string>
    <string name="fail_to_create_notebook">创建日记本失败</string>
    <string name="edit_notebook">编辑日记本</string>
    <string name="update_success">更新成功</string>
    <string name="create_notebook_success">日记本《%s》创建成功</string>
    <string name="update_failed">更新失败</string>
    <string name="content_saved_as_draft">内容已存为草稿</string>
    <string name="unable_upload_picture">如果您拒绝权限，临时图片无法创建和上传</string>
    <string name="fail_read_pictures">读取图片失败</string>
    <string name="action_canceled">操作已取消</string>
    <string name="cover_upload_failed">封面图上传失败</string>
    <string name="cover_upload_success">封面图上传成功</string>
    <string name="create_diary">写日记</string>
    <string name="notebook_subject_hint">主题</string>
    <string name="notebook_desc_hint">日记本描述 (可选)</string>
    <string name="action_send">发表</string>
    <string name="unable_to_find_notebook">未找到该笔记本，请稍后重试</string>
    <string name="create_diary_hint">今天有什么想法呢？</string>
    <string name="unable_to_fetch_notebooks">未获取到日记本，可能是网络断开或没有有效的日记本</string>
    <string name="pick_picture">选择图片</string>
    <string name="choose_notebook_hint">请选择一个日记本</string>
    <string name="create_diary_failed">发送日记失败，请稍后重试</string>
    <string name="create_diary_success">日记已创建</string>
    <string name="delete_diary">删除日记</string>
    <string name="content_copied">内容已复制</string>
    <string name="diary_delete_failed">日记刪除失败</string>
    <string name="diary_delete_success">日记已删除</string>
    <string name="userAccount">用户名（邮箱）</string>
    <string name="password">密码</string>
    <string name="login">登录</string>
    <string name="register">注册胶囊</string>
    <string name="registerAction">注册</string>
    <string name="pref_name">昵称</string>
    <string name="pref_intro">个人简介</string>
    <string name="pref_avatar">头像</string>
    <string name="nickName">昵称</string>
    <string name="nextAction">下一步</string>
    <string name="version">版本号</string>
    <string name="tips">提示</string>
    <string name="tips_content">- 任意地方点击标题可跳转到顶部\n- 资料页点击头像可以发私信</string>
    <string name="about_me">关于我</string>
    <string name="about_me_description">我是个热爱 Google 的 Android 开发者，现在上海，如果有好的职位可以推荐给我~</string>
    <string name="my_email" translatable="false">danteandroi@gmail.com</string>
    <string name="license" translatable="false">License</string>
    <string name="license_description">本APP已得到站长授权。如有任何建议请直接联系我</string>
    <string name="about">关于</string>
    <string name="feedback_description">如果你有好的idea或建议，赶快说出来吧</string>
    <string name="set_feedback">应用反馈</string>
    <string name="app">应用</string>
    <string name="profile">个人资料</string>
    <string name="pref_gender">性别</string>
    <string name="donate">捐赠</string>
    <string name="donate_description">本App是个人时间的成果，您的支持会让它变得越来越好</string>
    <string name="set_my_home">我的作为首页</string>
    <string name="set_my_home_desc">使用自己的资料页作为首页</string>
    <string name="customize">个性化</string>
    <string name="draw_clear">清空</string>
    <string name="draw_save">保存</string>
    <string name="draw_brush">形状</string>
    <string name="draw_background">背景图</string>
    <string name="draw_attrs">画板属性</string>
    <string name="confirm">确定</string>
    <string name="reset">重置</string>
    <string name="set_pattern_lock_title">设置手势密码</string>
    <string name="pref_id">用户ID</string>
    <string name="night_mode">夜间</string>
    <string name="hongbao">支付宝红包</string>
</resources>