<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
>
    <PreferenceCategory android:title="@string/customize">

        <Preference
            android:icon="@drawable/person"
            android:key="profile"
            android:title="@string/profile"/>
        <Preference
            android:icon="@drawable/notifications"
            android:key="notifications"
            android:title="@string/my_notifications"/>

        <SwitchPreference
            android:key="my_home"
            android:icon="@drawable/home"
            android:summary="@string/set_my_home_desc"
            android:title="@string/set_my_home"/>
    </PreferenceCategory>


    <PreferenceCategory android:title="@string/app">
        <Preference
            android:key="clear_cache"
            android:summary="@string/set_current_cache"
            android:title="@string/set_clear_cache"/>
        <Preference
            android:key="feedback"
            android:summary="@string/feedback_description"
            android:title="@string/set_feedback"/>
        <Preference
            android:key="about"
            android:title="@string/about"/>
    </PreferenceCategory>


</PreferenceScreen>