<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_settings"
          android:orderInCategory="0"
          android:title="@string/action_settings"
          app:showAsAction="never"/>

    <item android:id="@+id/night_mode"
          android:orderInCategory="1"
          android:title="@string/night_mode"
          app:showAsAction="never"/>
    <item android:id="@+id/donate"
          android:orderInCategory="2"
          android:title="@string/donate"
          app:showAsAction="never"/>
    <item android:id="@+id/time_pill"
          android:orderInCategory="3"
          android:title="@string/app_name"
          app:showAsAction="never"/>
    <item android:id="@+id/hongbao"
          android:orderInCategory="4"
          android:title="@string/hongbao"
          app:showAsAction="never"/>
</menu>