<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">


    <EditTextPreference
        android:capitalize="words"
        android:icon="@drawable/ic_person_nickname"
        android:inputType="textCapWords"
        android:key="nickname"
        android:maxLines="1"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:title="@string/pref_name"/>

    <Preference
        android:defaultValue="true"
        android:icon="@drawable/ic_face_black_24px"
        android:key="avatar"
        android:title="@string/pref_avatar"/>

    <ListPreference
        android:defaultValue="0"
        android:entries="@array/pref_list_genders"
        android:entryValues="@array/pref_list_genders_values"
        android:icon="@drawable/ic_wc_black_24px"
        android:key="gender"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_gender"/>

    <Preference
        android:icon="@drawable/ic_subject_black_24px"
        android:key="intro"
        android:selectAllOnFocus="true"
        android:title="@string/pref_intro"/>
    <Preference
        android:icon="@drawable/ic_info_outline_black_24px"
        android:key="user_id"
        android:title="@string/pref_id"/>

    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--<ListPreference-->
    <!--android:defaultValue="-1"-->
    <!--android:entries="@array/pref_example_list_titles"-->
    <!--android:entryValues="@array/pref_example_list_values"-->
    <!--android:key="example_list"-->
    <!--android:negativeButtonText="@null"-->
    <!--android:positiveButtonText="@null"-->
    <!--android:title="@string/pref_title_add_friends_to_messages"/>-->

</PreferenceScreen>
