<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    app:layoutDescription="@xml/login_fragment_scene"
    tools:context=".ui.login.LoginFragment">

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <TextView
        android:id="@+id/changeAction"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/accountWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/primary_text_dark"
        android:textColorHint="@android:color/tertiary_text_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/userAccount"
            android:imeActionLabel="@string/nextAction"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress|textAutoComplete"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:text="502273376@qq.com" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pswWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/primary_text_dark"
        android:textColorHint="@android:color/tertiary_text_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/password"
            android:imeActionLabel="@string/login"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:text="dmc555" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/primary_text_dark"
        android:textColorHint="@android:color/tertiary_text_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/nickName"
            android:imeActionLabel="@string/registerAction"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLines="1"
            android:selectAllOnFocus="true" />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.motion.widget.MotionLayout>