<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="100dp"
    android:layout_marginTop="68dp"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <Button
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="@dimen/dp_10"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="24dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:theme="@style/LoginButton"
        app:layout_constraintBottom_toTopOf="@+id/changeAction" />

    <TextView
        android:id="@+id/changeAction"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/accountWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@android:color/primary_text_dark"
        android:textColorHint="@android:color/tertiary_text_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/userAccount"
            android:imeActionLabel="@string/nextAction"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress|textAutoComplete"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:text="502273376@qq.com" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pswWrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@android:color/primary_text_dark"
        android:textColorHint="@android:color/tertiary_text_dark">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:backgroundTint="@android:color/transparent"
            android:hint="@string/password"
            android:imeActionLabel="@string/login"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLines="1"
            android:selectAllOnFocus="true"
            android:text="dmc555" />

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>